--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@angular/router": "~21.1.0",
     "@angular/ssr": "~21.1.0",
     "express": "^4.21.2",
-    "rxjs": "~7.8.0"
+    "rxjs": "~7.8.0",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@angular-devkit/core": "~21.1.0",
